--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <button class="button-1" value="1">1</button>
         <button class="button-2" value="2">2</button>
         <button class="button-3" value="3">3</button>
-        <button class="button-+">+</button>
-        <button class="button-=">=</button>
+        <button class="button-add">+</button>
+        <button class="button-operate">=</button>
     </div>
 </body>
 </html>
