--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="calculator">
+        <div class="screen-operations"></div>
         <div class="screen"></div>
+        <button class="button-0" value="0">0</button>
         <button class="button-1" value="1">1</button>
         <button class="button-2" value="2">2</button>
         <button class="button-3" value="3">3</button>
