--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="button-2" value="2">2</button>
         <button class="button-3" value="3">3</button>
         <button class="button-add">+</button>
-        <button class="button-minus">-</button>
+        <button class="button-subtract">-</button>
         <button class="button-operate">=</button>
     </div>
 </body>
