--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button class="button-3" value="3">3</button>
         <button class="button-add">+</button>
         <button class="button-subtract">-</button>
+        <button class="button-multiply">*</button>
+        <button class="button-divide">/</button>
         <button class="button-operate">=</button>
     </div>
 </body>
