--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         <button class="button-1" value="1">1</button>
         <button class="button-2" value="2">2</button>
         <button class="button-3" value="3">3</button>
+        <button class="button-4" value="4">4</button>
+        <button class="button-5" value="5">5</button>
+        <button class="button-6" value="6">6</button>
+        <button class="button-7" value="7">7</button>
+        <button class="button-8" value="8">8</button>
+        <button class="button-9" value="9">9</button>
         <button class="button-add">+</button>
         <button class="button-subtract">-</button>
-        <button class="button-multiply">*</button>
-        <button class="button-divide">/</button>
+        <button class="button-multiply">×</button>
+        <button class="button-divide">÷</button>
         <button class="button-operate">=</button>
     </div>
 </body>
