--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button class="button-multiply">×</button>
         <button class="button-divide">÷</button>
         <button class="button-operate">=</button>
+        <button class="button-clear">Clear</button>
     </div>
 </body>
 </html>
