--- a/index.html
+++ b/index.html
@@ -8,28 +8,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="calculator">
-        <div class="screen-operations"></div>
-        <div class="screen"></div>
-        <div class="button-container">
-            <button class="button-1" value="1">1</button>
-            <button class="button-2" value="2">2</button>
-            <button class="button-3" value="3">3</button>
-            <button class="button-4" value="4">4</button>
-            <button class="button-5" value="5">5</button>
-            <button class="button-6" value="6">6</button>
-            <button class="button-7" value="7">7</button>
-            <button class="button-8" value="8">8</button>
-            <button class="button-9" value="9">9</button>
+    <div>WTF</div>
+    <div>
+        <div class="calculator">
+            <div class="screen-container">
+                <div class="screen-operations"></div>
+                <div class="screen"></div>
+            </div>
+            <div class="buttons-container">
+                <div class="number-container">
+                    <button class="button-1" value="1">1</button>
+                    <button class="button-2" value="2">2</button>
+                    <button class="button-3" value="3">3</button>
+                    <button class="button-4" value="4">4</button>
+                    <button class="button-5" value="5">5</button>
+                    <button class="button-6" value="6">6</button>
+                    <button class="button-7" value="7">7</button>
+                    <button class="button-8" value="8">8</button>
+                    <button class="button-9" value="9">9</button>
+                    <button>.</button>
+                    <button class="button-0" value="0">0</button>
+                    <button class="button-operate">=</button>
+                </div>
+                <div class="operations-container">
+                    <button class="button-add">+</button>
+                    <button class="button-subtract">-</button>
+                    <button class="button-multiply">×</button>
+                    <button class="button-divide">÷</button>
+                    <button class="button-clear">Clear</button>
+                </div>
+            </div>
         </div>
-        <button class="button-0" value="0">0</button>
-        <button class="button-add">+</button>
-        <button class="button-subtract">-</button>
-        <button class="button-multiply">×</button>
-        <button class="button-divide">÷</button>
-        <button class="button-operate">=</button>
-        <button class="button-clear">Clear</button>
-        
     </div>
 </body>
 </html>
