--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>WTF</div>
+    <div>Calculator</div>
     <div>
         <div class="calculator">
             <div class="screen-container">
