--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>Calculator</div>
-    <div>
+    <div id="calculator-container">
         <div class="calculator">
             <div class="screen-container">
                 <div class="screen-operations"></div>
