--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button class="button-1" value="1">1</button>
                     <button class="button-2" value="2">2</button>
                     <button class="button-3" value="3">3</button>
-                    <button>.</button>
+                    <button class="button-point">.</button>
                     <button class="button-0" value="0">0</button>
                     <button class="button-operate">=</button>
                 </div>
