--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>Calculator</div>
+    <div id="title-container">
+        <h1>Calculator</h1>
+    </div>
     <div id="calculator-container">
         <div class="calculator">
             <div class="screen-container">
